# mAIgic-nyu

./: .gitignore  README.md  assistant.py  pyproject.toml  server.py  test.py  utils.py
.circleci/: config.yml
examples/: gmail_demo.py
llm_prompts/: prompts.yaml
src/: __init__.py  hello.py
src/db/: models.py
src/gmail/: client.py  models.py
src/gpt/: gpt.py
src/maigic/: api.py
src/maigic_nyu/: api.py
src/maigic_nyu/db/: _models.py  api.py
src/maigic_nyu/gmail/: README.md  _client.py  _models.py
src/maigic_nyu/gpt/: _gpt.py  api.py
src/maigic_nyu/slack/: _slack.py  api.py
src/maigic_nyu/trello/: __init__.py  _trello.py  _trello_manager.py  api.py  trello_service.py
src/slack/: slack.py
src/trello/: README.md  _trello.py  api.py  trello.py  trello_manager.py  trello_service.py
summaries/: summary_20241026_184513.txt
test/: test_write.py
tests/: __init__.py  conftest.py  test_api.py  test_hello.py  test_trello.py  test_trello_api.py  test_trello_manager.py
tests/gmail/: gmail.py
