[project]
name = "maigic-nyu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "ruff>=0.7.3",
    "types-requests>=2.32.0.20241016",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["S101", "D203", "D213", "COM812", "ISC001", "PLW0603", "FBT001", "FBT002", "SLF001", "ANN001", "ANN201", "PLR2004", "DTZ005", "SIM117", "D103", "BLE001"]